<resources>
    <string name="app_name">Slug Central</string>
    <string name="map">Map</string>
    <string name="search_hint">CMPS 121, ECON, etc...</string>
    <string name="add">Add Class</string>
    <string name="calendar">Schedule</string>
    <string name="GE">GE Requirements</string>
    <string name="search">Search</string>
    <string name="title_activity_directory">Directory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings for FB  -->
    <string name="facebook_app_id">1718768328205149</string>
    <string name="fb_login_protocol_scheme">fb1718768328205149</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">nJX6YMiGD1z9HFvqapFjvNwEo</string>
    <string name="twitter_consumer_secret" translatable="false">LrWnx4L53Uzymenn1ccpeKnOZz6UTZexJHlYB2AKRAfdWrGtpu
</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="yourGE">G.E. Requirements Checklist</string>
    <string name="CC">Cross-Cultural Anaylsis (CC)</string>
    <string name="ER">Ethnicity And Race (ER)</string>
    <string name="IM">Interpreting Arts and Media (IM)</string>
    <string name="MF">Mathematical and Formal Reasoning (MF)</string>
    <string name="SI">Scientific Inquiry (SI)</string>
    <string name="SR">Statistical Reasoning (SR)</string>
    <string name="TA">Textual Anaylsis and Interpretation (TA)</string>
    <string name="prespectives">Prespectives</string>
    <string name="pe_e">Environmental Awareness (PE-E)</string>
    <string name="pe_h">Human Behavior (PE-H)</string>
    <string name="pe_t">Technology and Society (PE-T)</string>
    <string name="practice">Practice</string>
    <string name="pr_e">Collaborative Endeavor (PR-E)</string>
    <string name="pr_c">Creative Process (PR-C)</string>
    <string name="pr_s">Service Learning (PR-S)</string>
    <string name="comp">Composition</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="complete">Complete</string>
    <string name="mail_feedback">twong40@ucsc.edu</string>
    <string name="mail_feedback_subject">Feedback On Your App: SlugCentral</string>
    <string name="thankFeedback">Thanks For The Feedback :)</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="default_message">Hey There ;)</string>
    <string name="instructor">Instructor:</string>
    <string name="classroom">Classroom:</string>
    <string name="class_number">Class Number:</string>
    <string name="days_times"><![CDATA[Days & Times:]]></string>
    <string name="remove">remove</string>
    <string name="class_status">Class Status:</string>
    <string name="seats">Seats:</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="Reg">Create New Account</string>
    <string name="display_name">Display Name</string>
</resources>
