<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Directory"
    tools:showIn="@layout/app_bar_directory">

    <Button
        android:id="@+id/buttonGE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="38dp"
        android:text="@string/GE"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSchedule"
        tools:text="@string/GE" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="38dp"
        android:text="@string/search"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGE"
        tools:text="@string/search" />

    <Button
        android:id="@+id/buttonSchedule"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="38dp"
        android:text="@string/calendar"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directoryLogo"
        tools:text="@string/calendar" />

    <ImageView
        android:id="@+id/directoryLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/slugcentral" />

</android.support.constraint.ConstraintLayout>